--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,9 +1,18 @@
-<input type="text" [(ngModel)]="inputTitle">
-<input type="text" [(ngModel)]="inputText">
-<button (click)="addCard(inputTitle, inputText)">вставить</button>
-<div class="card" *ngFor="let card of cardList; let i=index">
+<!--Кнопка добавляет пустой элемент -->
+<button
+  (click)="addCard()"
+  class="btn"
+>Добавить</button>
+
+<h1>Блог</h1>
+
+<!--Дальше выводятся карточки с кнопками их изменения-->
+<div class="card " *ngFor="let card of cards; let i=index">
   <h2>{{card.title}}</h2>
   <p>{{card.text}}</p>
-  <button (click)="removeCard(i)">Удалить</button>
+  <button
+    (click)="goToCard(card)"
+    class="btn"
+  >Редактировать</button>
 </div>
 
