--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,10 +1,30 @@
 .card{
   border: 1px solid black;
-  background: gray;
+  border-radius: 10px;
+  background: #cbcbcb;
   display: flex;
   flex-direction: column;
-  width: 300px;
+  width: 50%;
+  margin: 0 auto;
   align-items: center;
   padding: 10px 20px;
   margin-top: 30px;
+  overflow: hidden;
+  button{
+    margin-top: 20px;
+  }
+}
+h1{
+  text-align: center;
+}
+h2, p{
+  overflow: hidden;
+}
+.btn{
+  border: none;
+  background: #7c7cfd;
+  color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  padding: 10px 20px;
 }
